# uplift-forecast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: auto.md  frameworks.md  matching.md  metrics.md  models.md
docs/tutorials/: targeting-under-a-budget.md
examples/: multi_treatment_quickstart.py  quickstart.py  rerum_quickstart.py  roadmap_extras.py
research/: uplift-roadmap.md
tests/: conftest.py  test_auto.py  test_core.py  test_diagnostics.py  test_edge_cases.py  test_evaluation.py  test_explain.py  test_metrics.py  test_ope.py
tests/test_correctness/: conftest.py  test_matching.py  test_meta_learners.py
tests/test_frameworks/: test_rerum.py
tests/test_losses/: test_rerum_loss.py
tests/test_matching/: test_cem.py  test_diagnostics.py  test_embedding.py  test_general_nn.py  test_kernel.py  test_mahalanobis_psm.py  test_matchers.py
tests/test_models/: test_causal_forest.py  test_causal_forest_interval.py  test_continuous.py  test_drlearner.py  test_multi_arm.py  test_multi_learner.py  test_policy_forest.py  test_policy_learner.py  test_rlearner.py  test_survival.py  test_tarnet.py  test_topic1_neural.py  test_uplift_tree.py  test_xlearner.py  test_zlearner.py
uplift_forecast/: __init__.py  auto.py  core.py  diagnostics.py  evaluation.py  explain.py  losses.py  metrics.py  ope.py
uplift_forecast/common/: __init__.py  _base_meta.py  _base_neural.py  _data_module.py  _modules.py  _multiarm_neural.py  _scalers.py  _uplift_model.py
uplift_forecast/frameworks/: __init__.py  _loss_builder.py  rerum.py
uplift_forecast/matching/: __init__.py  _backends.py  _base_matcher.py  _diagnostics.py  _kernels.py  cem.py  embedding.py  general_nn.py  kernel.py  mahalanobis.py  mahalanobis_psm.py  propensity.py
uplift_forecast/models/: __init__.py  causal_forest.py  cfrnet.py  descn.py  dragonnet.py  drlearner.py  drnet.py  efin.py  euen.py  flextenet.py  m3tn.py  multi_learner.py  policy_forest.py  policy_learner.py  rlearner.py  slearner.py  survival.py  tarnet.py  tlearner.py  two_stage.py  uplift_tree.py  vcnet.py  xlearner.py  zlearner.py
